# ExpenseManagerBot

./: .gitignore  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/migrations/: env.py
src/models/db_models/: account.py  category.py  operation.py  sub_categories.py  user.py
src/services/db/: IDbApi.py  PostgreDbApi.py
