[tool.poetry]
name = "expensemanager"
version = "0.1.0"
description = "Telegram bot to manage expenses"
authors = ["Nikita Shagalov <shagalovprog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
